--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,28 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<!-- MySql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+				<!-- For JSP compilation -->
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-jasper</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.threeten/threetenbp -->
+				<dependency>
+					<groupId>org.threeten</groupId>
+					<artifactId>threetenbp</artifactId>
+					<version>0.7.2</version>
+				</dependency>
 	</dependencies>
 
 	<build>
