--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.port=2020
 #logging.level=DEBUG
 # Database
 db.driver: com.mysql.cj.jdbc.Driver
-db.url: jdbc:mysql://107.180.92.205:3306/lyn_sys?serverTimezone=UTC
-db.username: sirrom
-db.password: Tyrone@2018
+db.url: jdbc:mysql://localhost:3306/lyn_sys?serverTimezone=UTC
+db.username: root
+db.password: 
  
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
