--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.2.4.RELEASE</version>
 		</dependency>
+		<!-- HIBERNATE >
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.8.Final</version>
+		</dependency-->
 		<!-- MySql -->
 		<dependency>
 			<groupId>mysql</groupId>
