--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=2020
 db.driver: com.mysql.cj.jdbc.Driver
 db.url: jdbc:mysql://localhost:3306/lyn_sys?serverTimezone=UTC
 db.username: root
-db.password: Tyrone@2018
+db.password: 
  
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
